# substack-style-rec

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  render.yaml
backend/: Dockerfile  download_videos.py  functions.py  ingest.py  main.py  models.py  pyproject.toml  run_setup_logged.sh  setup_pixeltable.py
backend/routers/: creators.py  recommendations.py  search.py  videos.py
docs/: BACKEND_SPEC.md  FLOW_DIAGRAM.md
src/app/: layout.tsx
src/app/search/: page.tsx
src/app/watch/[id]/: page.tsx
src/components/: nav.tsx
src/lib/: api.ts  user-state.tsx
